# paragon_stats

./: .env.example  .gitignore  CLAUDE.md  LICENSE  PRD.md  PRIVACY_POLICY.md  README.md  TERMS_OF_SERVICE.md  prompt.txt  pyproject.toml  receipt_transformations.py  requirements.txt
backend/: __init__.py  config.py  database.py  main.py
backend/models/: __init__.py  images.py  receipt.py  stats.py  waitlist.py
backend/routes/: __init__.py  export.py  stats.py  upload.py  waitlist.py
backend/services/: __init__.py  deduplication.py  exporter.py  parser.py  stats.py  storage.py  wrapped.py
backend/tests/: __init__.py
data/final/: paragon_data_full.xlsx
data/raw/: paragon_2501030561115160.json  paragon_2501036830145142.json  paragon_2501042606151597.json  paragon_2501047583015534.json  paragon_2501076993125160.json  paragon_2501083210155160.json  paragon_2501083306145160.json  paragon_2501101320095160.json  paragon_2501103671145160.json  paragon_2501117976125160.json  paragon_2501131775095160.json  paragon_2501148557125160.json  paragon_2501174659145160.json  paragon_2501202677135160.json  paragon_2501218428054966.json  paragon_2501225670155160.json  paragon_2501254517135534.json  paragon_2501292274167608.json  paragon_2501307109155160.json  paragon_2501316506105160.json  paragon_2502017149157608.json  paragon_2502019190011597.json  paragon_2502043277165160.json  paragon_2502069730164966.json  paragon_2502074185165160.json  paragon_2502083362015534.json  paragon_2502088204021597.json  (+236 more)
frontend/: app.py
legal/: privacy_policy.md  terms_of_service.md
(+8 files in other folders)
